typo correction in index.html
Tiny typo in https://w3c-ccg.github.io/did-method-web/#update
authenticationa -> authentication

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ did:web:example.com%3A3000:user:alice
         <p class="note">
           Managing updates to the DID Document using a version control system
           such as git and continious integration system such as GitHub Actions
-          can provide support for authenticationa and audit history.
+          can provide support for authentication and audit history.
         </p>
 
         <p class="note" title="HTTP API">
